[package]
name = "arborist"
version = "0.0.3"
authors = ["Matt Garnett <crates@garnett.dev>"]
license = "MIT OR Apache-2.0"
description = "A surgical tool for interacting with binary trees."
repository = "https://github.com/lightclient/arborist"
keywords = ["tree", "merkle"]
categories = ["algorithms"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bonsai = { version = "0.2.1", default-features = false, features=["u128"] }
sha2 = "0.8.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

